# otel-python-custom-instrumentation

./: .gitignore  README.md  docker-compose.yml  instrument.py  main.py  pyproject.toml
